[gd_scene load_steps=11 format=3 uid="uid://c8s08rc21o1ra"]

[ext_resource type="Script" uid="uid://djawiwgh6pg6c" path="res://godot4/elements/cargos/Cargo.gd" id="1_mtln1"]
[ext_resource type="PackedScene" uid="uid://mjjon1epk4qn" path="res://godot4/effects/Shadow.tscn" id="2_siay3"]
[ext_resource type="PackedScene" uid="uid://5u7o8g8qd8ey" path="res://godot4/effects/trails/MotionAutoTrail.tscn" id="3_x7m7y"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_ribre"]
bounce = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_0ycic"]
radius = 70.0

[sub_resource type="Animation" id="Animation_5s86f"]
resource_name = "Hit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Color(3, 3, 3, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_e7hm2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("%Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ijh7r"]
resource_name = "Shine"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Color(1.4, 1.4, 1.4, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lqqh5"]
_data = {
&"Hit": SubResource("Animation_5s86f"),
&"RESET": SubResource("Animation_e7hm2"),
&"Shine": SubResource("Animation_ijh7r")
}

[sub_resource type="Gradient" id="Gradient_5cley"]
resource_local_to_scene = true
offsets = PackedFloat32Array(0, 0.997561)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 0.1)

[node name="Cargo" type="RigidBody2D"]
collision_layer = 512
collision_mask = 3606
physics_material_override = SubResource("PhysicsMaterial_ribre")
can_sleep = false
max_contacts_reported = 10
linear_damp = 1.0
script = ExtResource("1_mtln1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_0ycic")

[node name="Graphics" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Graphics"]
unique_name_in_owner = true

[node name="SpriteAnimation" type="AnimationPlayer" parent="Graphics"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_lqqh5")
}

[node name="Shadow" parent="Graphics" node_paths=PackedStringArray("sprite") instance=ExtResource("2_siay3")]
sprite = NodePath("../Sprite2D")

[node name="MotionAutoTrail" parent="." node_paths=PackedStringArray("host") instance=ExtResource("3_x7m7y")]
gradient = SubResource("Gradient_5cley")
disappear_speed = 1000.0
host = NodePath("..")
max_age = 0.6

[node name="UntouchableTimer" type="Timer" parent="."]
unique_name_in_owner = true
process_callback = 0
wait_time = 0.3
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="UntouchableTimer" to="." method="_on_untouchable_timer_timeout"]
